# odt2epub

./: .gitignore  LICENSE.adoc  README.adoc  config.yaml.template  converter.py  pyproject.toml
assets/: styles.css
