[tool.poetry]
name = "2epub"
version = "0.1.0"
description = ""
authors = ["Ramesh Balaji>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pypandoc = "^1.5"
colorama = "^0.4.3"
termcolor = "^1.1.0"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
